/F/Dashboard/User info and statistics section is ready

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -37,5 +37,5 @@
 
 .dashboard-layout {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 1fr minmax(10px, 25px) 3fr minmax(10px, 25px) 1fr;
 }
