--- a/src/assets/styles/cmps/DashboardModal.scss
+++ b/src/assets/styles/cmps/DashboardModal.scss
@@ -1,5 +1,4 @@
 .dashboard-modal {
-    // display: none;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -52,8 +51,6 @@
 
                 &:focus {
                     color: $accent-clr;
-                    border: 2px solid $accent-clr;
-                    border-radius: 12px;
                 }
             }
         }
@@ -101,10 +98,6 @@
                 color: $pending-clr;
             }
             
-            .icon {
-                color: $accent-clr;
-            }
-            
         }
 
         .last-month {
@@ -133,6 +126,10 @@
 
     }
 
+    .icon {
+        color: $accent-clr;
+    }
+
     .close-btn {
         position: absolute;
         border-radius: 8px;
@@ -156,3 +153,14 @@
         background-color: $light-clr4;
     }
 }
+
+.modal-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    backdrop-filter: blur(8px);
+    z-index: 90;
+  }
