building the review list and styling properly, there is a bug in time the user published the review

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -57,3 +57,6 @@
 @import "cmps/SimpleSlider.scss";
 @import "cmps/Dropdown.scss";
 @import "cmps/CategoryCard.scss";
+@import "cmps/ReviewList.scss";
+@import "cmps/ReviewPreview.scss";
+@import "cmps/LongTxt.scss";
