--- a/src/assets/styles/views/GigDetails.scss
+++ b/src/assets/styles/views/GigDetails.scss
@@ -51,6 +51,7 @@
         .gig-description {
             color: $dark-clr-1;
             line-height: em(24px);
+            margin-bottom: em(23px);
         }
     }
 
