adding a component for the star rate

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -60,3 +60,4 @@
 @import "cmps/ReviewList.scss";
 @import "cmps/ReviewPreview.scss";
 @import "cmps/LongTxt.scss";
+@import "cmps/ReviewStars.scss";
