--- a/src/assets/styles/cmps/ReviewPreview.scss
+++ b/src/assets/styles/cmps/ReviewPreview.scss
@@ -41,19 +41,19 @@
         font-size: .875rem;
         line-height: 1.3;
         margin-bottom: em(17px);
-        .stars{
-            display: flex;
-            gap: 6px;
-            align-items: center;
-            justify-content: center;
-            .star{
-                height: em(14px);
-                width: em(14px);
-            }
-            .rate.padding{
-                line-height: 21px;
-            }
-        }
+        // .stars{
+        //     display: flex;
+        //     gap: 6px;
+        //     align-items: center;
+        //     justify-content: center;
+        //     .star{
+        //         height: em(14px);
+        //         width: em(14px);
+        //     }
+        //     .rate.padding{
+        //         line-height: 21px;
+        //     }
+        // }
         .divider{
             border-right: 1px solid $light-clr2;
             height: 1.2142857143em;
