--- a/src/assets/styles/cmps/DashboardModal.scss
+++ b/src/assets/styles/cmps/DashboardModal.scss
@@ -59,7 +59,55 @@
 
     .dashboard-content {
         grid-column: 3;
-        padding: 20px;
+        padding: rem(26px);
+
+        .header {
+            font-weight: 600;
+            font-size: rem(32px);
+            text-align: left;
+            letter-spacing: rem(-2px);
+            color: $accent-clr;
+        }
+
+        .front-charts {
+            justify-content: space-evenly;
+            
+            .radar {
+                margin-block: rem(20px);
+                border: 2px solid $light-clr4;
+                border-radius: 8px;
+                width: rem(500px);
+                box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+            }
+
+            .needle {
+                position: relative;
+                margin-block: rem(20px);
+                border: 2px solid $light-clr4;
+                border-radius: 8px;
+                // width: rem(250px);
+                box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+                text-align: center;
+                
+                h3 {
+                    color: $dark-clr-4;
+                    padding-block-start: rem(25px);
+                }
+
+                p {
+                    position: absolute;
+                    font-size: rem(13px);
+                    color: $dark-clr-3;
+                    padding-block-start: rem(16px);
+                    padding-inline: 6px;
+                        .alert {
+                            color: $error-clr;
+                        }
+                }
+            }
+
+        }
+
     }
 
     .user-info {
@@ -69,6 +117,7 @@
         position: relative;
 
         .user-name {
+            text-align: center;
             color: $accent-clr;
             font-size: rem(40px);
             font-weight: 600;
@@ -77,27 +126,28 @@
 
         .user-profile-img {
             font-size: 3em;
-            margin-block: rem(35px);
+            margin-block-start: rem(35px);
+            margin-block-end: rem(15px);
             width: 164px;
-            
+
             img {
                 z-index: 1;
                 border-radius: 50%;
             }
         }
-        
+
         .stats {
             position: absolute;
             color: $dark-clr-1;
-            
-            & > * {
+
+            &>* {
                 margin-block-start: rem(30px);
             }
-            
+
             .avg {
                 color: $pending-clr;
             }
-            
+
         }
 
         .last-month {
@@ -139,7 +189,7 @@
         z-index: 999;
 
         &:hover {
-            background-color: $error-clr;
+            background-color: $accent-clr;
         }
     }
 
@@ -160,7 +210,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
+    background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(8px);
     z-index: 90;
-  }
+}
