adding the chart review

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -61,3 +61,4 @@
 @import "cmps/ReviewPreview.scss";
 @import "cmps/LongTxt.scss";
 @import "cmps/ReviewStars.scss";
+@import "cmps/ReviewChart.scss";
