--- a/src/assets/styles/cmps/ReviewStars.scss
+++ b/src/assets/styles/cmps/ReviewStars.scss
@@ -2,7 +2,7 @@
     display: flex;
     gap: 6px;
     align-items: center;
-    justify-content: center;
+    // justify-content: center;
     .star{
         height: em(14px);
         width: em(14px);
