--- a/src/assets/styles/cmps/DashboardModal.scss
+++ b/src/assets/styles/cmps/DashboardModal.scss
@@ -71,7 +71,7 @@
 
         .front-charts {
             justify-content: space-evenly;
-            
+
             .radar {
                 margin-block: rem(20px);
                 border: 2px solid $light-clr4;
@@ -88,7 +88,7 @@
                 // width: rem(250px);
                 box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
                 text-align: center;
-                
+
                 h3 {
                     color: $dark-clr-4;
                     padding-block-start: rem(25px);
@@ -100,13 +100,22 @@
                     color: $dark-clr-3;
                     padding-block-start: rem(16px);
                     padding-inline: 6px;
-                        .alert {
-                            color: $error-clr;
-                        }
+
+                    .alert {
+                        color: $error-clr;
+                    }
                 }
             }
 
         }
+
+        .sub-header {
+            color: $dark-clr-4;
+            font-size: rem(18px);
+            margin-block: rem(12px);
+            padding-inline-start: rem(16px);
+        }
+
 
     }
 
