--- a/src/assets/styles/views/ReviewIndex.scss
+++ b/src/assets/styles/views/ReviewIndex.scss
@@ -1,25 +1,82 @@
 .review-index {
-    .review-list {
-        list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: rem(50px);
+    margin-top: rem(40px);
+
+    .add-review {
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: start;
+        gap: em(15px);
 
-        li {
-            // background-color: $clr2;
-            // color: $clr6;
-            padding: 5px;
-            margin: 5px;
+        &>* {}
+
+        .heading {
+            color: $dark-clr-4;
+            font-size: rem(32px);
         }
 
-        a {
-            // color: $clr1;
-            padding: 10px;
+        .sub-heading {
+            font-size: rem(23px);
+            color: $dark-clr;
+            font-weight: 400;
+            margin-block-end: rem(20px);
         }
 
-        h3 {
-            background-color: #ddd;
-            padding: 10px 5px;
-            margin: 5px;
+        label {
+            font-size: rem(18px);
+            font-weight: 700;
+            display: flex;
+            flex-direction: column;
+            color: $dark-clr;
+        }
+
+        .txt-label {
+            width: 100%;
+            position: relative;
+
+            textarea {
+                resize: none;
+                font-size: 1.2rem;
+                font-family: inherit;
+                font-weight: 400;
+                height: rem(275px);
+                padding: em(15px);
+                color: $dark-clr;
+                border: em(2px) solid lighten($dark-clr-3, 20%);
+                border-radius: em(5px);
+
+                &:focus-visible {
+                    border: em(2px) solid lighten($dark-clr-3, 10%);
+                    outline: 0;
+                }
+            }
+
+            .letter-count {
+                position: absolute;
+                bottom: em(5px);
+                right: em(15px);
+                font-size: rem(14px);
+                color: darken($dark-clr-2, 10%);
+                font-weight: 200;
+            }
+        }
+
+        .send {
+            font-size: 1.3rem;
+            background-color: $dark-clr;
+            align-self: flex-end;
+            margin-block-start: rem(10px);
+            font-weight: 700;
+            letter-spacing: em(-0.4px);
+            padding: em(13px);
+            border-radius: em(4px);
+            transition: background-color 0.3s;
+
+            &:hover {
+                background-color: $accent-clr;
+            }
         }
     }
 }
