not finished the component of user mini detail

--- a/src/assets/styles/cmps/ReviewList.scss
+++ b/src/assets/styles/cmps/ReviewList.scss
@@ -1,6 +1,6 @@
 .reviews{
     h1{
-        font-size: 20px;
+        font-size: rem(20px);
         line-height: 28px;
         margin-bottom: em(16px);
     }
