--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -63,3 +63,4 @@
 @import "cmps/LongTxt.scss";
 @import "cmps/ReviewStars.scss";
 @import "cmps/ReviewChart.scss";
+@import "cmps/UserMiniDetail.scss";
