--- a/src/assets/styles/views/HomePage.scss
+++ b/src/assets/styles/views/HomePage.scss
@@ -1,8 +1,10 @@
 .home {
-    .title-slide{
-        margin-block-start: rem(96px);
-        // padding-block-end: rem(24px);
-        // font-weight: 700;
+    .title-slide {
+        font-size: rem(32px);
+        margin-block-start: rem(105px);
+        padding-block-end: rem(24px);
+        font-weight: 1000;
+        letter-spacing: em(-1px);
         line-height: rem(38.4px)
     }
 }
