Add disabled class to continue btn

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -27,7 +27,7 @@
             }
 
             .links-container {
-                a {
+                .btn {
                     color: $light-clr;
 
                     &:hover {
