--- a/src/assets/styles/cmps/DashboardModal.scss
+++ b/src/assets/styles/cmps/DashboardModal.scss
@@ -41,6 +41,7 @@
                 background: none;
                 color: $list-subtitle-clr;
 
+
                 span {
                     margin-inline-end: rem(10px);
                 }
@@ -50,6 +51,10 @@
                 }
 
                 &:focus {
+                    color: $accent-clr;
+                }
+
+                &.active {
                     color: $accent-clr;
                 }
             }
