Added sorting to the Top Countries by Views table

--- a/src/assets/styles/cmps/DashboardModal.scss
+++ b/src/assets/styles/cmps/DashboardModal.scss
@@ -139,6 +139,10 @@
                 border: 1px solid #ddd;
                 padding: rem(6px);
                 text-align: left;
+
+                &:not(:first-child) {
+                    cursor: pointer;
+                }
             }
 
             td {
