--- a/src/assets/styles/cmps/GigList.scss
+++ b/src/assets/styles/cmps/GigList.scss
@@ -13,11 +13,31 @@
         .img-container {
             width: 100%;
             height: 55%;
-            margin-block-end: 18px;
+            margin-block-end: rem(18px);
 
+            .slick-slider{
+                .gallry-btn-prev,
+                .gallry-btn-next{
+                    height: 40px;
+                    width: 40px;
+                    font-size: 15px;
+                    padding: 0;
+                    top: 39%;
+                }
+                
+                .gallry-btn-prev{
+                    left: em(17px);
+                }
+
+                .gallry-btn-next{
+                    right: em(17px);
+                }
+
+            }
+            
             .gig-img {
                 width: 100%;
-                height: 100%;
+                height: em(200px);
                 object-fit: cover;
                 border: 1px solid #e4e5e7;
                 border-radius: 8px;
