--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -34,6 +34,7 @@
 @import "views/UserPayment.scss";
 @import "views/Checkout.scss";
 @import "views/OrderIndex.scss";
+@import "views/AddGig.scss";
 
 // Components
 @import "cmps/AppHeader";
