--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -65,3 +65,4 @@
 @import "cmps/ReviewStars.scss";
 @import "cmps/ReviewChart.scss";
 @import "cmps/UserMiniDetail.scss";
+@import "cmps/DashboardCard.scss";
