/F/UserDetails/add loading animation

--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -65,6 +65,13 @@
     font-weight: 600
 }
 
+.loading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
+
 .pending {
     color: $pending-clr
 }
