New sellers are offered the option to create a new gig

--- a/src/assets/styles/views/UserDetails.scss
+++ b/src/assets/styles/views/UserDetails.scss
@@ -227,6 +227,18 @@
                     }
                 }
             }
+
+            .link {
+                display: inline-block;
+                color: #00698c;
+                font-size: 14px;
+                font-weight: 400;
+                background: none;
+
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
         }
 
         .seller-gigs {
