--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -42,7 +42,7 @@
 @import "cmps/UserMsg";
 @import "cmps/SellingText.scss";
 @import "cmps/GigList.scss";
-@import "cmps/GigListWrapper..scss";
+@import "cmps/GigListWrapper.scss";
 @import "cmps/ShoppingCart";
 @import "cmps/DynamicBtn.scss";
 @import "cmps/CategoryNav";
@@ -66,3 +66,4 @@
 @import "cmps/ReviewChart.scss";
 @import "cmps/UserMiniDetail.scss";
 @import "cmps/DashboardCard.scss";
+@import "cmps/AddGigCard.scss";
