Add indication for selected category in AppHeader

--- a/src/assets/styles/cmps/CategoryNav.scss
+++ b/src/assets/styles/cmps/CategoryNav.scss
@@ -25,7 +25,8 @@
                 color: $dark-clr-1;
                 transition: 0.2s color;
 
-                &:hover {
+                &:hover,
+                &.selected {
                     color: $dark-clr1;
                     box-shadow: inset 0 -2.5px $accent-clr;
                 }
