Add correct Media query sizes and mixins

--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -1,25 +1,31 @@
 /* Breakpoint mixins */
 
 @mixin for-mobile-layout {
-    @media (max-width: calc($mobile-breakpoint + 40px)) {
+    @media (max-width: $mobile-breakpoint) {
         @content;
     }
 }
 
 @mixin for-narrow-layout {
-    @media (min-width: calc($mobile-breakpoint + 40px)) {
+    @media (min-width: $narrow-breakpoint) {
         @content;
     }
 }
 
 @mixin for-normal-layout {
-    @media (min-width: calc($narrow-breakpoint + 40px)) {
+    @media (min-width: $normal-breakpoint) {
         @content;
     }
 }
 
-@mixin for-wide-layout {
-    @media (min-width: calc($normal-breakpoint + 40px)) {
+@mixin for-large-layout {
+    @media (min-width: $large-breakpoint) {
+        @content;
+    }
+}
+
+@mixin for-xl-layout {
+    @media (min-width: $xl-breakpoint) {
         @content;
     }
 }
