--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -49,6 +49,8 @@ $shadow-clr: #b2b3b681;
 $arrow-btn-size: 48px;
 
 // Breakpoints
-$mobile-breakpoint: 460px;
-$narrow-breakpoint: 720px;
-$normal-breakpoint: 960px;
+$mobile-breakpoint: 600px;
+$narrow-breakpoint: 900px;
+$normal-breakpoint: 1155px;
+$large-breakpoint: 1235px;
+$xl-breakpoint: 1380px;
