User details layout redesigned

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -38,3 +38,8 @@
     display: grid;
     grid-template-columns: 1fr minmax(10px, 25px) 3fr minmax(10px, 25px) 1fr;
 }
+
+.user-details-layout {
+    display: grid;
+    grid-template-columns: 1fr minmax(10px, 25px) 1fr;
+}
