Add my gigs table to user details

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -67,3 +67,4 @@
 @import "cmps/UserMiniDetail.scss";
 @import "cmps/DashboardCard.scss";
 @import "cmps/AddGigCard.scss";
+@import "cmps/MyGigsTable.scss";
