--- a/src/assets/styles/views/UserDetails.scss
+++ b/src/assets/styles/views/UserDetails.scss
@@ -31,7 +31,7 @@
                         width: 100%;
                         border-radius: 50%;
                     }
-                    
+
                 }
 
                 .username-info {
@@ -309,5 +309,13 @@
             }
 
         }
+    }
+
+    .user-gigs {    
+        h1 {
+            font-size: rem(24px);
+        }
+
+        
     }
 }
