--- a/src/assets/styles/cmps/CategoryCard.scss
+++ b/src/assets/styles/cmps/CategoryCard.scss
@@ -1,11 +1,13 @@
 .catCard {
-    width: 267px;
-    height: 386px;
+    // max-width: 50%;
+    // width: auto;
+    height: em(386px);
+    // width: em(296px);
     color: white;
     position: relative;
     cursor: pointer;
     img {
-      width: 100%;
+      max-width: 100%;
       height: 100%;
       object-fit: cover;
     }
@@ -28,4 +30,19 @@
         line-height: 1.95rem;
      
     }
+    
+
   }
+  // @media (max-width: 1197px) {
+  //   .catCard img {
+  //       /* Adjust the max-width and font-size as needed for screens up to 1197px */
+  //       max-width: 80%; /* For example, reduce the image size */
+  //   }
+  // }
+  
+  // @media (max-width: 1027px) {
+  //   .catCard img {
+  //       /* Adjust the max-width and font-size as needed for screens up to 1027px */
+  //       max-width: 60%; /* For example, further reduce the image size */
+  //   }
+  // }
