--- a/src/assets/styles/cmps/SimpleSlider.scss
+++ b/src/assets/styles/cmps/SimpleSlider.scss
@@ -1,23 +1,13 @@
 @import url(slick-carousel/slick/slick.css);
 @import url(slick-carousel/slick/slick-theme.css);
 
-// .slide {
-//     display: flex;
-//     justify-content: center;
-//     padding: 100px 0px;
-// }
-@media (min-width: 768px) {
-    .slider-home {
-      /* Styles for screens wider than 768px */
-    }
-  }
-  
-  @media (min-width: 1024px) {
-    .slider-home {
-      /* Styles for screens wider than 1024px */
-    }
-  }
 .slider-home {
-    margin-block-end: rem(96px);
-    
+    margin-block-end: rem(96px); 
+    .slick-slide > div {
+        margin: 0 em(10px);
+      }
+      .slick-list {
+        margin: 0 em(-10px);
+      }
 }
+   
